Support dark mode

--- a/src/components/Introduction.mdx
+++ b/src/components/Introduction.mdx
@@ -1,7 +1,6 @@
-
 import { Meta, Controls } from '@storybook/blocks';
 
-<Meta title="Introduction" />
+<Meta title='Introduction' />
 
 # Introduction
 
@@ -10,10 +9,11 @@ import { Meta, Controls } from '@storybook/blocks';
 There are many terrific graphics libraries out there eg: [Observable plot](https://observablehq.com/@observablehq/plot-gallery). Why build another?
 
 We wanted to build something
+
 - which takes [Tailwindcss](https://tailwindcss.com/) styles as arguments and are easy to integrate within existing pages built with TailwindCSS.
-- which behaves purely 'headless'ly like the eponymous [headless-ui](https://headlessui.com) 
+- which behaves purely 'headless'ly like the one and only [headless-ui](https://headlessui.com)
 - which implements charts as well and try to cover as many charts from [FT-interactive Visual Vocabulary](http://ft-interactive.github.io/visual-vocabulary/) as possible
-- which implements behaviour consistently (animations, tooltips etc.)
+- which implements behaviour consistently (animations, tooltips, dark mode etc.)
 - which is well documented
 
-D3js is the library we are using to write most of these components. 
+D3js is the library we are using to write most of these components.
