LineChart can have optional series names at the end

--- a/src/components/Introduction.mdx
+++ b/src/components/Introduction.mdx
@@ -11,7 +11,7 @@ There are many terrific graphics libraries out there eg: [Observable plot](https
 We wanted to build something
 
 - which takes [Tailwindcss](https://tailwindcss.com/) styles as arguments and are easy to integrate within existing pages built with TailwindCSS.
-- which behaves purely 'headless'ly like the one and only [headless-ui](https://headlessui.com)
+- which behaves purely 'headless'ly like [headless-ui](https://headlessui.com) (styles are not pre-built and can be customised as per your design language)
 - which implements charts as well and try to cover as many charts from [FT-interactive Visual Vocabulary](http://ft-interactive.github.io/visual-vocabulary/) as possible
 - which implements behaviour consistently (animations, tooltips, dark mode etc.)
 - which is well documented
